--- a/Haug-Jauho.tex
+++ b/Haug-Jauho.tex
@@ -10,7 +10,7 @@
 %メールアドレス
 \email{junji@ucas.ac.cn}
 %作成・更新日とバージョンを書けばいいと思うよ
-\date{YYYY-mm-ddver1}
+\date{2020-04-05}
 %
 \graphicspath{{./figure/}}
 % - - - - - - - - - 以上，個別編集箇所 - - - - - - - - - 
@@ -208,8 +208,26 @@ $k = n - m$と変数を書き換え，Kroneckerのデルタを用いて$k + m = 
 さて，経路順序Green関数(contour-ordered Green function)を定義しよう：
 \begin{align}
 G (x, x')
-	& \equiv - \zi \langle \mathrm{T}_C [ \psi^{}_H (x) \psi^{\dagger}_H (x') ] \rangle
+	& \equiv - \zi \langle \mathrm{T}_C [ \psi^{}_{\H} (x) \psi^{\dagger}_{\H} (x') ] \rangle
 ,\end{align}
+ただし，経路$C$は$t_0$に始まり，同じ$t_0$で終わる図~\ref{fig:4.2}のような，実軸に沿って$t$と$t'$を一度だけ通るような経路を表す．
+ここで，Part Iと同じように，$\psi_{\H} (x)$
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
