causal → 因果 に置換

--- a/Haug-Jauho.tex
+++ b/Haug-Jauho.tex
@@ -224,7 +224,7 @@ G (x, x')
 \end{figure}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-非平衡の理論において経路順序Green関数は，熱平衡の理論におけるcausal Green関数に類似の役割を果たす．
+非平衡の理論において経路順序Green関数は，熱平衡の理論における因果Green関数に類似の役割を果たす．
 すなわち，以下で見るように，Wickの定理に基づいた摂動展開を有している．
 しかしながら，時刻ラベル$\tau$と$\tau'$は経路上の2つの分枝にあるため，それらがどの分枝にあるのかが問題になる．
 $\tau$と$\tau'$は，図~\ref{fig:4.2}の経路の2つの分枝のどちらの分枝にもありうるので，4つの可能性がある．
@@ -244,7 +244,7 @@ G (x, x')
 	.\end{array}
 	\right.
 \end{align}
-ここで，causal (あるいは時間順序) Green関数$G_{\mathrm{c}}$を
+ここで，因果 (あるいは時間順序) Green関数$G_{\mathrm{c}}$を
 \begin{align}
 G_{\mathrm{c}} (x, x')
 	& = - \zi \langle \mathrm{T} [ \psi^{}_{\mH} (x) \psi^{\dagger}_{\mH} (x') ] \rangle
