章立ての番号を合わせた

--- a/Haug-Jauho.tex
+++ b/Haug-Jauho.tex
@@ -37,6 +37,8 @@
 以上の準備ののち，lesser Green関数の時間発展を記す方程式である量子運動方程式をKadanoffとBaymの方法に基づいて議論する．
 \end{abstract}
 
+\setcounter{section}{3}
+
 %-%-%-%-%-%-%-%-%-%--%-%-%-%-%-%-%-%-%-%
 \section{径路順序Green関数}
 %-%-%-%-%-%-%-%-%-%--%-%-%-%-%-%-%-%-%-%
